Merge implementations of different jpackage tasks into one JpackageTask class